--- a/package.json
+++ b/package.json
@@ -18,19 +18,43 @@
     "node-cache": "^4.2.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
-    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.(js)": [
+      "eslint --max-warnings=0",
+      "prettier --write",
+      "git add"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "^7.3.4",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "prettier": "^1.16.3",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.1",
+    "eslint": "^5.14.1",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-config-react-app": "^3.0.7",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "babel-eslint": "^9.0.0"
   },
   "scripts": {
     "dev": "nodemon server/server.js",
     "prod": "node server/server.js",
+    "prettier": "prettier --write src/**/**/*.js pages/*.js server/**/**/*.js api/*.js",
     "build": "next build",
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
